--- a/src/runtime/styles/layout.scss
+++ b/src/runtime/styles/layout.scss
@@ -80,6 +80,9 @@
     padding: 64px 64px 96px;
   }
   @include responsive($vdoc-bp-lg) {
+    padding: 64px 0 96px 48px;
+  }
+  @include responsive(1300px) {
     padding: 64px 0 96px 64px;
   }
   @include responsive($vdoc-bp-xl) {
