--- a/src/runtime/styles/main.css
+++ b/src/runtime/styles/main.css
@@ -1,5 +1,7 @@
 :root {
   --vdoc-header-height: 55px;
+  --vdoc-c-header-bg: #fff;
+  --vdoc-z-index-header: 20;
   --vdoc-screen-max-width: 1376px;
   --vdoc-sidebar-width-mobile: 320px;
   --vdoc-sidebar-width-small: 272px;
@@ -7,6 +9,8 @@
   --vdoc-c-text-1: #213547;
   --vdoc-c-text-2: rgba(60, 60, 60, .7);
   --vdoc-c-brand: #42b883;
+  --vdoc-c-brand-light: #42d392;
+  --vdoc-c-bg: #fff;
   --vdoc-z-index-overlay: 40;
   --vdoc-z-index-sidebar: 50;
 }
@@ -14,6 +18,25 @@
 .vuedoc {
   font-family: system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
   font-size: 14px;
+}
+.vuedoc body {
+  width: 100%;
+  min-width: 320px;
+  min-height: 100vh;
+  font-family: inherit;
+  letter-spacing: .2px;
+  line-height: 24px;
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--vdoc-c-text-1);
+  background-color: var(--vdoc-c-bg);
+  direction: ltr;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  transition: color .5s,background-color .5s;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-wrap: break-word;
 }
 
 
