Add VuedocExample component

--- a/src/runtime/styles/layout.scss
+++ b/src/runtime/styles/layout.scss
@@ -2,6 +2,7 @@
 @import "./mixins";
 
 @import "./layout/header.scss";
+@import "./hljs-github.min.css";
 
 .vuedoc-layout {
   backface-visibility: hidden;
